refactor: 💡 Refactored rates API
