# src/router/rates.ts
@@ -4,13 +4,13 @@ import rateController from '../controllers/RateController';
 
 export default (router: Router): void => {
   router.get(
-    '/rate/:facilityId/:itemType/:itemId/:key',
+    '/rate/:facilityId/:itemId/:key/:rateType',
     authMiddleware,
     rateController.getRate
   );
 
   router.post(
-    '/rate/:facilityId/:itemType/:itemId/:key',
+    '/rate/:facilityId/:itemId/:key/:rateType',
     authMiddleware,
     rateController.setRate
   );
